[package]
name = "zine"
version = "0.9.0"
description = "A simple and opinionated tool to build your own magazine."
authors = ["Folyd"]
homepage = "https://github.com/zineland/zine"
repository = "https://github.com/zineland/zine"
license = "Apache-2.0"
edition = "2021"
exclude = ["tailwind.config.js", "tailwindcss.html", "zine-entry.css"]
readme = "README.md"

[features]
# Enable vendored openssl to help building in cross-rs environment.
# See https://github.com/cross-rs/cross/pull/322
openssl-vendored = ["hyper-tls/vendored"]

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
dashmap = { version = "5.4", features = ["serde"] }
fluent = "0.16"
futures = { version = "0.3", default-features = false }
html5ever = "0.26"
http-body = "0.4"
hyper = { version = "0.14", features = ["client", "server", "tcp", "http1"] }
hyper-tls = "0.5"
hyper-tungstenite = "0.9"
include_dir = "0.7"
intl-memoizer = "0.5"
lol_html = "0.3"
markup5ever_rcdom = "0.2"
notify-debouncer-mini = { version = "0.2", default-features = false }
once_cell = "1"
parking_lot = "0.12"
pulldown-cmark = "0.9"
rayon = "1.6"
regex = "1.7"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = [
    "default-fancy",
] }
tera = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1.23", features = ["rt-multi-thread", "signal", "macros"] }
toml = "0.5"
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.3", features = ["fs"] }
walkdir = "2"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
test-case = "2"
