[package]
name = "zine"
version = "0.14.0"
description = "A simple and opinionated tool to build your own magazine."
authors = ["Folyd"]
homepage = "https://github.com/zineland/zine"
repository = "https://github.com/zineland/zine"
license = "Apache-2.0"
edition = "2021"
exclude = ["tailwind.config.js", "tailwindcss.html", "zine-entry.css"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.68"
clap = { version = "4", features = ["cargo"] }
fluent = "0.16"
# genkit = { path = "../genkit" }
genkit = { git = "https://github.com/zineland/genkit", branch = "main" }
hyper = { version = "0.14", features = ["client", "server", "tcp", "http1"] }
include_dir = "0.7"
intl-memoizer = "0.5"
minijinja = { version = "0.32", features = ["source"] }
once_cell = "1"
parking_lot = "0.12"
promptly = "0.3"
rayon = "1.6"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
tokio = { version = "1.26", features = ["rt-multi-thread", "signal", "macros"] }
toml = "0.7"
walkdir = "2"

[dev-dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
test-case = "2"
